# Generated by Django 6.1 on 2026-09-02 12:34

import django.db.models.deletion
from django.db import migrations, models


class Migration(migrations.Migration):

    initial = True

    dependencies = [
        ('establishments', '0001_initial'),
    ]

    operations = [
        migrations.CreateModel(
            name='DossierMedicalPartage',
            fields=[
                ('idDMP', models.AutoField(primary_key=True, serialize=False)),
                ('numeroDMP', models.CharField(max_length=50, unique=True, verbose_name='Numéro DMP')),
                ('dateCreation', models.DateTimeField(auto_now_add=True, verbose_name='Date de création')),
                ('dateMiseAJour', models.DateTimeField(auto_now=True, verbose_name='Date de mise à jour')),
                ('statut', models.CharField(choices=[('ACTIF', 'Actif'), ('ARCHIVE', 'Archivé')], default='ACTIF', max_length=20, verbose_name='Statut')),
            ],
            options={
                'verbose_name': 'Dossier Médical Partagé',
                'verbose_name_plural': 'Dossiers Médicaux Partagés',
            },
        ),
        migrations.CreateModel(
            name='LignePrescription',
            fields=[
                ('idLigne', models.AutoField(primary_key=True, serialize=False)),
                ('posologie', models.CharField(max_length=200, verbose_name='Posologie')),
                ('frequence', models.CharField(blank=True, max_length=100, verbose_name='Fréquence')),
                ('duree', models.CharField(blank=True, max_length=100, verbose_name='Durée du traitement')),
                ('quantite', models.CharField(blank=True, max_length=50, verbose_name='Quantité')),
            ],
            options={
                'verbose_name': 'Ligne de prescription',
                'verbose_name_plural': 'Lignes de prescription',
            },
        ),
        migrations.CreateModel(
            name='Medicament',
            fields=[
                ('idMedicament', models.AutoField(primary_key=True, serialize=False)),
                ('nomCommercial', models.CharField(max_length=200, verbose_name='Nom commercial')),
                ('forme', models.CharField(blank=True, max_length=100, verbose_name='Forme (comprimé, sirop…)')),
            ],
            options={
                'verbose_name': 'Médicament',
                'verbose_name_plural': 'Médicaments',
            },
        ),
        migrations.CreateModel(
            name='Prescription',
            fields=[
                ('idPrescription', models.AutoField(primary_key=True, serialize=False)),
                ('datePrescription', models.DateTimeField(auto_now_add=True, verbose_name='Date de prescription')),
                ('instructions', models.TextField(blank=True, verbose_name='Instructions')),
            ],
            options={
                'verbose_name': 'Prescription',
                'verbose_name_plural': 'Prescriptions',
            },
        ),
        migrations.CreateModel(
            name='Consultation',
            fields=[
                ('idConsultation', models.AutoField(primary_key=True, serialize=False)),
                ('dateHeure', models.DateTimeField(auto_now_add=True, verbose_name='Date et heure')),
                ('motif', models.CharField(max_length=255, verbose_name='Motif')),
                ('informationsCliniques', models.TextField(blank=True, verbose_name='Informations cliniques')),
                ('observations', models.TextField(blank=True, verbose_name='Observations')),
                ('diagnostic', models.CharField(blank=True, max_length=255, verbose_name='Diagnostic')),
                ('conduiteATenir', models.TextField(blank=True, verbose_name='Conduite à tenir')),
                ('compteRendu', models.TextField(blank=True, verbose_name='Compte rendu')),
                ('recommandations', models.TextField(blank=True, verbose_name='Recommandations')),
                ('etablissement', models.ForeignKey(on_delete=django.db.models.deletion.PROTECT, related_name='consultations', to='establishments.etablissement', verbose_name='Établissement')),
            ],
            options={
                'verbose_name': 'Consultation',
                'verbose_name_plural': 'Consultations',
                'ordering': ['-dateHeure'],
            },
        ),
    ]
